# DrWebTest

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/drwebtest/: AndroidManifest.xml  MainActivityUITest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  checksum.cpp
app/src/main/java/com/example/drwebtest/: AppListViewModel.kt  DrWebTestApplication.kt  MainActivity.kt  MainActivityViewModel.kt
app/src/main/java/com/example/drwebtest/di/: AppModule.kt
app/src/main/java/com/example/drwebtest/repository/: AppDetail.kt  AppRepository.kt  IAppRepository.kt
app/src/main/java/com/example/drwebtest/ui/screen/: AppDetailScreen.kt  AppListItem.kt  AppListScreen.kt  AppNavigation.kt  AppSkeleton.kt  TopBar.kt
app/src/main/java/com/example/drwebtest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/drwebtest/utils/: AppChangeManager.kt  AppLauncher.kt  ChecksumUtils.kt  IAppChangeManager.kt  IAppLauncher.kt
app/src/test/java/com/example/drwebtest/: ChecksumUtilsTest.kt  MainActivityViewModelTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
